--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/uuid": "^7.0.2",
     "core-js": "^3.6.4",
     "tailwindcss": "^1.2.0",
+    "tailwindcss-gradients": "^3.0.0",
     "uuid": "^7.0.3",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
