--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "postcss": "^7.0.27",
     "typescript": "~3.8.3",
     "vue-template-compiler": "^2.6.11"
+  },
+  "publishConfig": { 
+    "registry": "https://npm.pkg.github.com/" 
   }
 }
